--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "process": "^0.11.10",
     "sass": "^1.89.2",
     "sass-loader": "^16.0.5",
+    "scss-reset": "^1.4.6",
     "style-loader": "^4.0.0",
     "webpack": "^5.99.9",
     "webpack-cli": "^6.0.1",
